--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<br>
 			<br>
 			</div>
-			<p class="copy">© 2019 ADAM REMØY All Rights Reserved</p>
+			<!-- <p class="copy">© 2019 ADAM REMØY All Rights Reserved</p> -->
 	</center>
 </body>
 </html>
