--- a/omOss.html
+++ b/omOss.html
@@ -39,7 +39,7 @@
 			<br>
 			<p class="infoOmOss">Kreftforeningen er en av de største bruker- og interesseorganisasjonene i Norge med over 116 000 medlemmer og 27 000 frivillige. Arbeidet vårt er basert på innsamlede midler og gaver.</p>
 		</div>
-		<p class="copy">© 2019 ADAM REMØY All Rights Reserved</p>
+		<!-- <p class="copy">© 2019 ADAM REMØY All Rights Reserved</p> -->
 	</center>
 </body>
 </html>
