--- a/video.html
+++ b/video.html
@@ -48,7 +48,7 @@
    					<button class="btn"><i class="fa fa-download"></i> Download</button>
 				</form>
 			</div>
-		<p class="copy">© 2019 ADAM REMØY All Rights Reserved</p>
+		<!-- <p class="copy">© 2019 ADAM REMØY All Rights Reserved</p> -->
 	</center>
 </body>
 </html>
